// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageContainer components snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-cwbyoi-Title"
  >
    <h1
      class="css-ymxumn"
    >
      MDX Story
    </h1>
  </div>
</DocumentFragment>
`;

exports[`PageContainer overview snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-cwbyoi-Title"
  >
    <h1
      class="css-ymxumn"
    >
      Story
    </h1>
  </div>
</DocumentFragment>
`;
